# yap

./: .gitignore  CHANGELOG.md  DESIGN.md  PRODUCT.md  README.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_PROVENANCE.json  requirements.txt  test_transcribe_paths.py  transcribe.py
desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json  tauri.test.conf.json
desktop/src-tauri/capabilities/: default.json  live-overlay.json
desktop/src-tauri/examples/: nemotron_profile.rs
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/: 0001_job_ledger.sql  0002_prepared_remote_jobs.sql  0003_remote_spool_cleanup.sql  0004_remote_create_attempt.sql
desktop/src-tauri/src/: app.rs  atomic_text.rs  authorization.rs  batch_recordings.rs  bounded_file.rs  file_actions.rs  install_identity.rs  lib.rs  main.rs  media_protocol.rs  paths.rs  recording_access.rs  runtime_policy.rs  tray.rs
desktop/src-tauri/src/audio/: capture.rs  coordinator.rs  evidence.rs  frame.rs  manifest.rs  mod.rs  preprocess.rs  recording.rs  results.rs  session.rs  timeline.rs  vad.rs
desktop/src-tauri/src/commands/: history.rs  live.rs  media_protocol.rs  mod.rs  recordings.rs  setup.rs
desktop/src-tauri/src/file_actions/: tests.rs  transcripts.rs
desktop/src-tauri/src/jobs/: commands.rs  drain.rs  ledger.rs  migrations.rs  mod.rs  model.rs  remote.rs  resources.rs
desktop/src-tauri/src/live/: actions.rs  devices.rs  events.rs  hotkey_commands.rs  (+11 more)
desktop/src-tauri/tests/: audio_foundation.rs  job_ledger.rs  model_download.rs  parity.rs  server_connector.rs
(+835 files in other folders)
